--- a/coding/coding-analysis.yml
+++ b/coding/coding-analysis.yml
@@ -13,3 +13,9 @@ As you complete each step, I’ll leave updates in the comments:
 💡 Share helpful tips and resources
 🚀 Celebrate your progress and completion
 Let’s get started - good luck and have fun!
+
+
+#########################
+G could I please add some more data 
+new
+102023
